[package]
name = "rustweb2"
version = "1.0.29"
edition = "2021"
authors = ["George Barwood"]
license = "MIT OR Apache-2.0"
description = "Rust-based web server"
repository = "https://github.com/georgebarwood/rustweb2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rustdb = { path = "../RustDB", optional=true } 
rustdb = { version = "5.2.0", optional=true }
rustc-hash = "1.1.0"

#tokio = { version = "1.13.0", features = ["macros","rt-multi-thread","signal"] }
tokio = { version = "1.13.0", features = ["macros","signal"], optional=true }

mime = "0.3.16"
serde_urlencoded = "0.7.1"
clap = { version = "4.0.0", features = ["derive"] }
mimalloc = { version = "0.1.26", default-features = false }

serde = { version = "1.0.142", features = ["derive","rc"] }
bincode = "1.3.3"
serde_json = "1.0.110"

reqwest = "0.11.11"
lettre = { version = "0.11.1" }
flate3 = "1.0.0"
argon2rs = "0.2.5"
pdf-min = "0.1.2"

#console-subscriber = { path = "../console-main/console-subscriber" }

[features]
default = ["st-tokio","reqd"]
mt-tokio = ["dep:tokio", "tokio?/rt-multi-thread"]
st-tokio = ["dep:tokio", "tokio?/rt"]
reqd = ["dep:rustdb"]
unsafe-optim = ["dep:rustdb", "rustdb?/unsafe-optim"]

