[package]
name = "rustweb2"
version = "1.1.55"
edition = "2024"
authors = ["George Barwood"]
license = "MIT OR Apache-2.0"
description = "Rust-based web server"
repository = "https://github.com/georgebarwood/rustweb2"
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rustdb = { version = "7.0.0", features = ["serde"] }
#rustdb = { path = "../RustDB", features = ["serde"] }

pstd = { version = "1.0.0", features = ["serde"] }
#pstd = { path = "../pstd", features = ["serde"] }

tokio = { version = "1.13.0", features = ["macros","signal"]}
mime = "0.3.16"
#serde_urlencoded = "0.7.1"
clap = { version = "4.0.0", features = ["derive"] }
#mimalloc = { version = "0.1.26", default-features = false }

serde = { version = "1.0.142", features = ["derive","rc"] }
bincode = "=1.3.3" # Could consider using bitcode in future?
serde_json = "1.0.110"

reqwest = "0.13.0"
lettre = { version = "0.11.1" }
flate3 = "1.0.0"
argon2rs = "0.2.5"
pdf-min = "0.1.2"
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
#serde_urlencoded = "0.7.1"

#console-subscriber = { path = "../console-main/console-subscriber" }

[features]
default = ["mt-tokio","pstd"]
mt-tokio = ["tokio/rt-multi-thread"]
unsafe-optim = ["rustdb/unsafe-optim"]
log = ["rustdb/log"]
log-alloc = ["rustdb/log-alloc"]
pstd = ["rustdb/pstd"]
